--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -13,7 +13,7 @@ const tags = getUniqueTags(posts)
       tags.map((tag: string) => (
         <a
           href={`/tags/${tag}`}
-          class="visited:text-purple-500/90 hover:underline md:my-2"
+          class="text-blue-600 visited:text-purple-500/90 hover:underline md:my-2"
         >
           <p>#{tag}</p>
         </a>
