--- a/src/pages/links/index.astro
+++ b/src/pages/links/index.astro
@@ -1,8 +1,14 @@
 ---
 import LinkCard from "~/components/astro/link-card.astro"
-import { META } from "~/config"
+import { META, BLOG_ROLL } from "~/config"
 import { links } from "~/config/links"
 import MainLayout from "~/layouts/main.astro"
+
+import { getCollection } from "astro:content"
+import { getUniqueTags } from "../../utils"
+
+const posts = await getCollection("blog", (post) => !post.data.hide)
+const tags = getUniqueTags(posts)
 
 const pageMeta = META.pageMeta
 ---
@@ -13,10 +19,29 @@ const pageMeta = META.pageMeta
   ogImage={pageMeta.links.ogImage}
   needComment={true}
 >
-  <h3 class="my-10 text-center text-xl font-bold">Tarunesh's Links</h3>
+  <!-- <h3 class="my-10 text-center text-xl font-bold">Tarunesh's Links</h3> -->
 
-  <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
+  <!-- <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
     {links.map((link) => <LinkCard {...link} />)}
+  </div> -->
+
+  <div class="text-lg text-gray-600">
+    <h3 class="my-5 text-xl font-bold">#BlogRoll</h3>
+    <ol class="list-decimal px-10">
+    {
+      BLOG_ROLL.map((link: string) => (
+        
+          <li>
+            <a
+              href={link}
+              target="_blank"
+              class="text-blue-600 visited:text-purple-500/90 hover:underline md:my-2"
+            >
+              {link}
+            </a>
+          </li>
+      ))
+    }
+    </ol>
   </div>
-  <div class="prose max-w-3xl dark:prose-invert"></div>
 </MainLayout>
