--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -4,7 +4,7 @@ import Header from "~/components/astro/header.astro"
 import Navigation from "~/components/astro/nav.astro"
 import BaseLayout from "~/layouts/base.astro"
 
-const { title, description, ogImage, needComment } = Astro.props
+const { title, description, ogImage, needComment, transitions=true } = Astro.props
 const filename = Astro.url.pathname.split("/").filter(Boolean).pop() ?? ""
 const openGraphImage = !ogImage ? `/og/${filename}.png` : ogImage
 ---
@@ -14,6 +14,7 @@ const openGraphImage = !ogImage ? `/og/${filename}.png` : ogImage
   description={description}
   ogImage={openGraphImage}
   needComment={needComment}
+  transitions={transitions}
 >
   <main class="max-auto mb-10 w-full max-w-3xl">
     <Header />
