--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Skills from "~/components/astro/Skills.astro"
 import MainLayout from "~/layouts/main.astro"
 ---
 
-<MainLayout ogImage="/preview.png">
+<MainLayout ogImage="/preview.png" transitions={false}>
   <Intro />
   <Skills />
   <RecentBlogs />
