chore: regulat updates

--- a/src/components/astro/projects.astro
+++ b/src/components/astro/projects.astro
@@ -1,6 +1,6 @@
 ---
 import LinkCard from "~/components/astro/link-card.astro"
-import { links } from "~/config/links"
+import { links } from "~/config"
 ---
 
 <div class="my-10">
