chore: add captures

--- a/src/components/astro/life.astro
+++ b/src/components/astro/life.astro
@@ -1,5 +1,5 @@
 ---
-// import Carousel from "./Carousel.astro"
+import Carousel from "./carousel.astro"
 ---
 
 <div class="my-10">
@@ -8,5 +8,8 @@
     I am into fitness for 2 years now. Growing and glowing like never before.
     When not coding, I am either thinking about GYM or in the GYM.
   </p>
-  <!-- <Carousel /> -->
+  <Carousel />
+  <div class="flex justify-end">
+    <a href="/life" class="text-blue-600 hover:underline font-medium">See more &rarr;</a>
+  </div>
 </div>
