--- a/src/pages/sale/index.astro
+++ b/src/pages/sale/index.astro
@@ -7,9 +7,9 @@ const pageMeta = META.pageMeta
 ---
 
 <MainLayout
-  title={pageMeta.about.title}
-  description={pageMeta.about.description}
-  ogImage={pageMeta.about.ogImage}
+  title={pageMeta.sale.title}
+  description={pageMeta.sale.description}
+  ogImage={pageMeta.sale.ogImage}
 >
   <div class="prose max-w-3xl dark:prose-invert">
     <Items />
