--- a/src/components/astro/Carousel.astro
+++ b/src/components/astro/Carousel.astro
@@ -2,19 +2,26 @@
 import { captures as images } from "~/config"
 ---
 
-<div
-  class="slides flex h-64 snap-both snap-mandatory overflow-x-scroll scroll-smooth"
->
-  {
-    images.map((src, idx) => (
-      <div class="flex-shrink-0 snap-center p-2">
-        <img
-          class="h-full object-cover"
-          src={src}
-          loading="lazy"
-          alt={`Photo ${idx + 1}`}
-        />
-      </div>
-    ))
-  }
+<div>
+  <div
+    class="slides flex h-64 overflow-y-hidden snap-x snap-mandatory overflow-x-scroll scroll-smooth"
+  >
+    {
+      images.map((src, idx) => (
+        <div class="flex-shrink-0 snap-center p-2">
+          <img
+            class="h-full object-cover"
+            src={src}
+            loading="lazy"
+            alt={`Photo ${idx + 1}`}
+          />
+        </div>
+      ))
+    }
+  </div>
+  <div class="flex justify-end">
+    <a href="/life" class="font-medium text-blue-600 hover:underline"
+      >See more &rarr;</a
+    >
+  </div>
 </div>
